--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="no_camera">No camera present, can\'t take photos!</string>
     <string name="take_selfie">Take a new selfie!</string>
+    <string name="help_guide">Press and take a photo\n of yourself!</string>
 
 </resources>
